fix \put: it needs vertical-align: bottom when used outside of a picture environment

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -445,6 +445,7 @@ h1, h2, h3, h4 {
 .picture {
     display: inline-block;  /* so that it can be given a fixed size */
     position: relative;
+    vertical-align: bottom; /* needed for \put */
 }
 
 /* the coordinate system of the picture */
